# ros_ws

./: .gitignore
bot_ws/devel/: .catkin
bot_ws/devel/include/bot_msg/: bot_param.h  bot_vel.h  wheel_vel.h
bot_ws/devel/lib/bot_control/: bot_vel_to_wheel_vel.py  talker.py
bot_ws/devel/lib/pkgconfig/: bot_control.pc  bot_gazebo.pc  bot_msg.pc  msr.pc  msr_mb.pc
bot_ws/devel/share/bot_control/cmake/: bot_controlConfig.cmake
bot_ws/devel/share/bot_gazebo/cmake/: bot_gazeboConfig.cmake
bot_ws/devel/share/bot_msg/cmake/: bot_msg-msg-extras.cmake  bot_msg-msg-paths.cmake  bot_msgConfig.cmake
bot_ws/devel/share/msr/cmake/: msrConfig.cmake
bot_ws/devel/share/msr_mb/cmake/: msr_mbConfig.cmake
bot_ws/devel/share/roseus/ros/bot_msg/: manifest.l
bot_ws/src/bot_control/: CMakeLists.txt  package.xml
bot_ws/src/bot_control/scripts/: talker.py
bot_ws/src/bot_gazebo/: CMakeLists.txt  msr_con.rviz  package.xml
bot_ws/src/bot_gazebo/launch/: display.launch  gazebo.launch  stage.launch
bot_ws/src/bot_msg/: CMakeLists.txt
bot_ws/src/bot_msg/msg/: bot_param.msg  bot_vel.msg  wheel_vel.msg
bot_ws/src/msr/: CMakeLists.txt  README.md  urdf.rviz
bot_ws/src/msr/launch/: README.md  Xacro.launch  display.launch  gazebo.launch  nonXacro.launch  world.launch
bot_ws/src/msr/meshes/: back_left.STL  back_right.STL  base_link.STL  front_left.STL  front_right.STL
bot_ws/src/msr/urdf/: msr.csv  msr.gazebo.xacro  msr.urdf  msr.urdf.xacro
bot_ws/src/msr/world/: myWorld.world
bot_ws/src/msr_mb/: CMakeLists.txt  TODO.md  package.xml
bot_ws/src/msr_mb/config/: control.yaml  costmap_common_params.yaml  gazebo_interface.yaml  local_costmap_params.yaml  localization.yaml  twist_mux.yaml
bot_ws/src/msr_mb/launch/: control.launch  dwa.launch
openCv_ws/src/tester/: CMakeLists.txt  package.xml
openCv_ws/src/tester/scripts/: images.py  tut1.py
openCv_ws/src/tester/src/: node1.cpp  node2.cpp
ros_arduino/devel/: .catkin  setup.sh
ros_arduino_ws/devel/: .catkin  .rosinstall  local_setup.sh
ros_arduino_ws/devel/include/exo_angle_control/: ExoAngle.h
ros_arduino_ws/devel/lib/exo_angle_control/: anglePublusher
ros_arduino_ws/devel/lib/pkgconfig/: exo_angle_control.pc  msg_tester.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc
ros_arduino_ws/devel/lib/rosserial_arduino/: make_libraries.py  serial_node.py
ros_arduino_ws/devel/lib/rosserial_embeddedlinux/: make_libraries.py
ros_arduino_ws/devel/lib/rosserial_mbed/: make_libraries.py
ros_arduino_ws/devel/lib/rosserial_python/: message_info_service.py
ros_arduino_ws/devel/share/exo_angle_control/cmake/: exo_angle_control-msg-paths.cmake  exo_angle_controlConfig.cmake
ros_arduino_ws/devel/share/msg_tester/cmake/: msg_tester-msg-extras.cmake  msg_tester-msg-paths.cmake  msg_testerConfig.cmake
ros_arduino_ws/devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
ros_arduino_ws/devel/share/rosserial_chibios/: make_libraries.py
ros_arduino_ws/devel/share/rosserial_chibios/cmake/: rosserial_chibiosConfig.cmake
ros_arduino_ws/devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
ros_arduino_ws/devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
ros_arduino_ws/devel/share/rosserial_mbed/cmake/: rosserial_mbed-msg-extras.cmake  rosserial_mbed-msg-paths.cmake  rosserial_mbedConfig.cmake
ros_arduino_ws/devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-extras.cmake  rosserial_msgs-msg-paths.cmake  rosserial_msgsConfig.cmake
ros_arduino_ws/devel/share/rosserial_python/cmake/: rosserial_pythonConfig.cmake
ros_arduino_ws/devel/share/rosserial_server/cmake/: rosserial_serverConfig.cmake
ros_arduino_ws/devel/share/rosserial_test/cmake/: rosserial_testConfig.cmake
ros_arduino_ws/devel/share/rosserial_tivac/cmake/: rosserial_tivac-extras.cmake  rosserial_tivacConfig.cmake
ros_arduino_ws/devel/share/rosserial_vex_cortex/: make_libraries.py
ros_arduino_ws/devel/share/rosserial_vex_cortex/cmake/: rosserial_vex_cortexConfig.cmake
ros_arduino_ws/devel/share/rosserial_vex_v5/: make_libraries.py
ros_arduino_ws/devel/share/rosserial_vex_v5/cmake/: rosserial_vex_v5Config.cmake
ros_arduino_ws/devel/share/rosserial_windows/cmake/: rosserial_windowsConfig.cmake
ros_arduino_ws/install/: .rosinstall  local_setup.sh  setup.sh
ros_arduino_ws/install/include/exo_angle_control/: ExoAngleChange.h
ros_arduino_ws/install/include/msg_tester/: Angle.h
ros_arduino_ws/install/lib/pkgconfig/: exo_angle_control.pc  msg_tester.pc
ros_arduino_ws/install/share/msg_tester/: package.xml
ros_arduino_ws/install/share/msg_tester/cmake/: msg_tester-msg-paths.cmake  msg_testerConfig.cmake
ros_arduino_ws/install/share/msg_tester/msg/: Angle.msg
ros_arduino_ws/src/: README.md
ros_arduino_ws/src/exo_angle_control/: CMakeLists.txt  package.xml
ros_arduino_ws/src/exo_angle_control/config/: default_angle.yaml
ros_arduino_ws/src/exo_angle_control/include/: bldc_robot_hw.h
ros_arduino_ws/src/exo_angle_control/launch/: Pub.launch  RosControlTest.launch  dummyGait.launch  multipleArduino.launch  oneArduino.launch
ros_arduino_ws/src/exo_angle_control/msg/: ExoAngle.msg
ros_arduino_ws/src/exo_angle_control/src/: BLDCHardwareInterface.cpp  ROScontrol1.cpp  anglePubSub.cpp  anglePublusher.cpp  dummyGait.cpp  dummyGait1.cpp  encoder.cpp  openCM.cpp  servoHardwareInterface.cpp  speedTest.cpp
ros_arduino_ws/src/exo_angle_control/src/controller/: EffortController.cpp
ros_arduino_ws/src/exo_angle_control/src/ros_control/: hardware_if.cpp
ros_arduino_ws/src/msg_tester/: CMakeLists.txt
ros_arduino_ws/src/msg_tester/src/: angleSubs.cpp  angleUpdate.cpp
ros_arduino_ws/src/stewart_msg/: CMakeLists.txt  package.xml
(+58 files in other folders)
