<?xml version="1.0"?>
<package format="2">
  <name>stewart_msg</name>
  <version>0.0.0</version>
  <description>The stewart_msg package</description>

  <maintainer email="exoskeleton@todo.todo">exoskeleton</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
<exec_depend>message_runtime</exec_depend>

<build_export_depend>stewart_msg_generate_messages_cpp</build_export_depend>

 <export>

  </export>
</package>
