<?xml version="1.0"?>
<package format="2">
  <name>msg_tester</name>
  <version>0.0.0</version>
  <description>The msg_tester package</description>
  <maintainer email="ohm@todo.todo">ohm</maintainer>
  <license>TODO</license>
  
  <!-- default -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- extra -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>

  </export>
</package>
